_2009_11_17__14_26_41_ Chi-Hsiu Liang

  * Update the manual for shortest integration time of species profile

_2009_11_13__19_32_06_ Chi-Hsiu Liang

  * Update the manual for gridSearch

2009-November-13 Struan Robertson

	* ReactionManager.cpp: Minor correction to the calculation of Chi^2.

_2009_11_13__15_35_43_ Chi-Hsiu Liang

  * Modify the way specifying cemetery state

2009-November-13 Struan Robertson

	* fitting.cpp: Rough sketch of golden section line search added.

_2009_10_27__17_47_36_ Chi-Hsiu Liang

  * Changed the boundary of the shortest integration time of species profile.

_2009_10_16__11_55_04_ Chi-Hsiu Liang

  * Corrected the cemetery state method.

_2009_10_14__16_13_57_ Chi-Hsiu Liang

  * Removed the renormalization method. 

_2009_10_12__09_13_20_ Chi-Hsiu Liang

  * Modify some terms in Bartis-Widom rates to QD in order to avoid some diagonalization problem
    after converting from QD to double.

_2009_10_07__16_11_46_ Chi-Hsiu Liang

  * Minor modifications

_2009_09_21__17_11_36_ Chi-Hsiu Liang

  * A few modifications related with compiler complaints and Bartis-Widom output.

2009-September-18 Chris Morley

	* src/MicroRate.cpp, src/Reaction.cpp: move the check on the activation energy
	being positive with ILT reactions from the calculation to the parsing phase,
	so that it is found earlier and the program terminated.
	
	* src/ReactionManager.cpp: during parsing, continue after an error to find further
	errors, but retainthe updated readStatus to terminate before calculation.
	
	* src/Molecule.h,src/Molecule.cpp,src.ReactionManager.cpp: Added new function
	Molecule::isCemeteryState(). Avoids the construction of a gWellProperties member
	if it didn't already have one and the making of inappropriate default values of
	deltaEDown, which occurred with getColl().isCemeteryState().	 

_2009_09_18__13_21_13_ Chi-Hsiu Liang

  * Coorect an indices error on AssociationReaction.cpp

2009-September-14 Dave Glowacki 
