@@ -1,3 +1,7 @@
+_2009_11_18__12_14_08_ Chi-Hsiu Liang
+
+  * Tunneling for bimolecular reactions
+
 _2009_11_17__14_26_41_ Chi-Hsiu Liang
 
   * Update the manual for shortest integration time of species profile
